@@ -50,8 +50,6 @@ MifareTag	 mifare_ultralight_tag_new (void);
 void		 mifare_ultralight_tag_free (MifareTag tag);
 uint8_t		 sector_0x00_crc8 (Mad mad);
 uint8_t		 sector_0x10_crc8 (Mad mad);
-MifareClassicBlockNumber  mifare_classic_first_sector_block (MifareClassicBlockNumber block);
-MifareClassicBlockNumber  mifare_classic_last_sector_block (MifareClassicBlockNumber block);
 
 #define MIFARE_ULTRALIGHT_PAGE_COUNT 16
 
